Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54517

winrt: fullscreen does not work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.2, 5.7.1
    • 5.6.1, 5.7.0
    • GUI: Window management
    • None
    • winrt
    • WinRT
    • db79b89899e6537d540e290beaed263c46e3a885

    Description

      Window.visibility: Window.FullScreen has no effect. QQuickView.showFullscreen() does not work either.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mkalinow Maurice Kalinowski
            ibingow wangbin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes