winrt: support fullscreen mode

Enable switching application to fullscreen mode. This is mostly required
for desktop targets of WinRT.

Task-number: QTBUG-54517
Change-Id: I67e4020bc2ec8da86d94815e5765959f4ae2b63f
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>